--- a/julia/problem_025.ipynb
+++ b/julia/problem_025.ipynb
@@ -11,7 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "e025092e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"Julia v\", string(VERSION))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "4289b3d4",
    "metadata": {},
    "outputs": [],
@@ -29,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "1359fb31",
    "metadata": {},
    "outputs": [
@@ -56,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c7aaeffb",
    "metadata": {},
    "outputs": [
@@ -64,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  31.801 ms (57666 allocations: 3.30 MiB)\n"
+      "  31.778 ms (57666 allocations: 3.30 MiB)\n"
      ]
     },
     {
@@ -91,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5dafbcb0",
    "metadata": {},
    "outputs": [
@@ -118,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "b9ec54e3",
    "metadata": {},
    "outputs": [
@@ -153,10 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "9a093712",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module euler.\n"
+     ]
+    }
+   ],
    "source": [
     "include(\"./euler.jl\")\n",
     "bm = @benchmark fibonacci(1000)\n",
