--- a/python/problem_030.ipynb
+++ b/python/problem_030.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 30\n",
+    "# Problem 30\n",
     "https://projecteuler.net/problem=30"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "39a7985e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44bd6d3",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
@@ -35,7 +51,9 @@
     "            total += int(i)**power\n",
     "        if n == total:\n",
     "            results.append(n)\n",
-    "    return sum(results)"
+    "    return sum(results)\n",
+    "\n",
+    "assert powers(start=2, end=10_000, power=4) == 19316"
    ]
   },
   {
@@ -43,9 +61,21 @@
    "execution_count": 3,
    "id": "9957b42b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "443839"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "assert powers(start=2, end=1_000_000, power=4) == 19316"
+    "# answer\n",
+    "powers(start=2, end=250_000, power=5)"
    ]
   },
   {
@@ -55,37 +85,44 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "443839"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155 ms ± 2.27 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "powers(start=2, end=10_000_000, power=5)"
+    "# benchmark\n",
+    "%timeit powers(start=2, end=250_000, power=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ad25bca",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "05162b0c",
+   "id": "91cecffd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.67 s ± 385 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "156 ms ± 2.48 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o powers(start=2, end=10_000_000, power=5)\n",
-    "euler.save_benchmark(30, t)"
+    "bm = %timeit -o powers(start=2, end=250_000, power=5)\n",
+    "import euler\n",
+    "euler.save_benchmark(30, bm)"
    ]
   }
  ],
@@ -105,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
