--- a/julia/problem_031.ipynb
+++ b/julia/problem_031.ipynb
@@ -5,24 +5,49 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 31\n",
+    "# Problem 31\n",
     "https://projecteuler.net/problem=31"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4289b3d4",
+   "id": "0dbfc09c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4289b3d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bb5c4c4",
+   "metadata": {},
+   "source": [
+    "### Solution 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "873fc553",
    "metadata": {},
    "outputs": [
@@ -37,13 +62,13 @@
     }
    ],
    "source": [
-    "function coin_sums()\n",
+    "function coin_sums()::Int64\n",
     "    \"\"\"\n",
     "    a = £2 (1x), b = £1 (2x), c = 50p (4x), d = 20p (10x), e = 10p (20x), f = 5p (40x), g = 2p (100x) and h = 1p (200x)\n",
     "    \"\"\"\n",
     "    counter = 0\n",
-    "    for a in 0:1, b in 0:2, c in 0:4, d in 0:10, e in 0:20, f in 0:40, g in 0:100, h in 0:200\n",
-    "        if 200a + 100b + 50c + 20d + 10e + 5f + 2g + 1h == 200\n",
+    "    for a ∈ 0:1, b ∈ 0:2, c ∈ 0:4, d ∈ 0:10, e ∈ 0:20, f ∈ 0:40, g ∈ 0:100, h ∈ 0:200\n",
+    "        if 200a + 100b + 50c + 20d + 10e + 5f + 2g + h == 200\n",
     "            counter += 1\n",
     "        end\n",
     "    end\n",
@@ -53,10 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b02eb7be",
+   "execution_count": 4,
+   "id": "391d91fc",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.029 s (0 allocations: 0 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -68,28 +100,27 @@
     }
    ],
    "source": [
-    "coin_sums()"
+    "@btime coin_sums()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df1885dc",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (skip one for-loop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dbc0f34a",
+   "execution_count": 5,
+   "id": "4bb9ddd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 5 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m1.029 s\u001b[22m\u001b[39m … \u001b[35m 1.048 s\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m1.030 s             \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m1.033 s\u001b[22m\u001b[39m ± \u001b[32m8.232 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[34m█\u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[34m█\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▆\u001b[39m \u001b[39m▁\n",
-       "  1.03 s\u001b[90m        Histogram: frequency by time\u001b[39m        1.05 s \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m0 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m0\u001b[39m."
+       "coin_sums (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -97,23 +128,71 @@
     }
    ],
    "source": [
-    "b = @benchmark coin_sums()"
+    "function coin_sums()::Int64\n",
+    "    \"\"\"\n",
+    "    a = £2 (1x), b = £1 (2x), c = 50p (4x), d = 20p (10x), e = 10p (20x), f = 5p (40x), g = 2p (100x) and h = 1p (200x)\n",
+    "    \"\"\"\n",
+    "    counter = 1 # £2 (1x)\n",
+    "    for b ∈ 0:2, c ∈ 0:4, d ∈ 0:10, e ∈ 0:20, f ∈ 0:40, g ∈ 0:100, h ∈ 0:200\n",
+    "        if 100b + 50c + 20d + 10e + 5f + 2g + h == 200\n",
+    "            counter += 1\n",
+    "        end\n",
+    "    end\n",
+    "    return counter\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3e76538a",
+   "execution_count": 6,
+   "id": "a5a2676c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  503.592 ms (0 allocations: 0 bytes)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "73682"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime coin_sums()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff8a3f99",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0a1ba9d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(31, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark coin_sums()\n",
+    "euler.save_benchmark(31, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -121,7 +200,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
