--- a/python/problem_033.ipynb
+++ b/python/problem_033.ipynb
@@ -19,22 +19,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Julia v1.11.1\n"
+      "Python v3.11.10\n"
      ]
     }
    ],
    "source": [
-    "println(\"Julia v\", string(VERSION))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6187e51d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
@@ -47,7 +37,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "82f4b246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4005"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select fractions less than 1\n",
+    "a = [(n, d) for n in range(10, 100) for d in range(10, 100) if n / d < 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4440ae38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cancellation options 4?/?8 (like 49/98)\n",
+    "b = [(n, d) for (n, d) in a if str(n)[1] == str(d)[0] and int(str(d)[1]) != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a444172f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[16, 64, 1, 4, 6], [19, 95, 1, 5, 9], [26, 65, 2, 5, 6], [49, 98, 4, 8, 9]]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
+    "c = [[n, d, int(str(n)[0]), int(str(d)[1]), int(str(n)[1])] for (n, d) in b if int(str(n)[0])/int(str(d)[1]) == n/d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "81024e70",
    "metadata": {},
    "outputs": [
@@ -96,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32dbe1b1",
    "metadata": {},
    "outputs": [],
@@ -123,15 +168,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.1",
-   "language": "julia",
-   "name": "julia-1.11"
+   "display_name": "datascience",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.11.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
