--- a/python/problem_033.ipynb
+++ b/python/problem_033.ipynb
@@ -37,98 +37,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82f4b246",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4005"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Select fractions less than 1\n",
-    "a = [(n, d) for n in range(10, 100) for d in range(10, 100) if n / d < 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "4440ae38",
+   "execution_count": 2,
+   "id": "66381c52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cancellation options 4?/?8 (like 49/98)\n",
-    "b = [(n, d) for (n, d) in a if str(n)[1] == str(d)[0] and int(str(d)[1]) != 0]"
+    "def factors(n):\n",
+    "    l = []\n",
+    "    for i in range(1, n+1):\n",
+    "        if n % i == 0:\n",
+    "            l.append(i)\n",
+    "    return set(l)\n",
+    "\n",
+    "assert factors(8) == {1, 2, 4, 8}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a444172f",
+   "execution_count": 3,
+   "id": "82f4b246",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[16, 64, 1, 4, 6], [19, 95, 1, 5, 9], [26, 65, 2, 5, 6], [49, 98, 4, 8, 9]]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
-    "c = [[n, d, int(str(n)[0]), int(str(d)[1]), int(str(n)[1])] for (n, d) in b if int(str(n)[0])/int(str(d)[1]) == n/d]"
+    "def solution():\n",
+    "\n",
+    "    # Select fractions less than 1\n",
+    "    a = [(n, d) for n in range(10, 100) for d in range(10, 100) if n / d < 1]\n",
+    "\n",
+    "    # Cancellation options 4?/?8 (like 49/98)\n",
+    "    b = [(n, d) for (n, d) in a if str(n)[1] == str(d)[0] and int(str(d)[1]) != 0]\n",
+    "\n",
+    "    # Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
+    "    c = [[n, d, int(str(n)[0]), int(str(d)[1]), int(str(n)[1])] for (n, d) in b if int(str(n)[0])/int(str(d)[1]) == n/d]\n",
+    "\n",
+    "    # Denominator\n",
+    "    d = 1\n",
+    "    for i in [item[3] for item in c]: d *= i\n",
+    "\n",
+    "    # Numerator\n",
+    "    n = 1\n",
+    "    for i in [item[2] for item in c]: n *= i\n",
+    "\n",
+    "    # Return denominator in lowest common terms\n",
+    "    return int(d / max(factors(n).intersection(factors(d))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81024e70",
+   "execution_count": 4,
+   "id": "4440ae38",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  179.875 μs (17661 allocations: 811.56 KiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "100"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@btime begin\n",
-    "\n",
-    "    # Select fractions less than 1\n",
-    "    a = [(n, d) for n in 10:99, d in 10:99 if n / d < 1]\n",
-    "\n",
-    "    # Cancellation options 4?/?8 (like 49/98) --> note: digit() returns digits in reverse order\n",
-    "    b = [(n, d) for (n, d) in a if digits(n)[1] == digits(d)[2]]\n",
-    "\n",
-    "    # Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
-    "    c = [[n, d, digits(n)[2], digits(d)[1], digits(n)[1]] for (n, d) in b if digits(n)[2]/digits(d)[1] == n/d]\n",
-    "\n",
-    "    # Denominator value\n",
-    "    denominator(prod([row[3]//row[4] for row in c]))\n",
-    "    \n",
-    "end"
+    "# answer\n",
+    "solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a444172f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "980 μs ± 12.3 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit solution()"
    ]
   },
   {
@@ -141,28 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "32dbe1b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "974 μs ± 6.83 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "include(\"./euler.jl\")\n",
-    "bm = @benchmark begin\n",
-    "\n",
-    "    # Select fractions less than 1\n",
-    "    a = [(n, d) for n in 10:99, d in 10:99 if n / d < 1]\n",
-    "\n",
-    "    # Cancellation options 4?/?8 (like 49/98) --> note: digit() returns digits in reverse order\n",
-    "    b = [(n, d) for (n, d) in a if digits(n)[1] == digits(d)[2]]\n",
-    "\n",
-    "    # Select the 1-digit nom/denom fractions that equals their 2-digit equivalents\n",
-    "    c = [[n, d, digits(n)[2], digits(d)[1], digits(n)[1]] for (n, d) in b if digits(n)[2]/digits(d)[1] == n/d]\n",
-    "\n",
-    "    # Denominator value\n",
-    "    denominator(prod([row[3]//row[4] for row in c]))\n",
-    "    \n",
-    "end\n",
-    "euler.save_benchmark(33, bm);"
+    "bm = %timeit -o solution()\n",
+    "import euler\n",
+    "euler.save_benchmark(33, bm)"
    ]
   }
  ],
